--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-  <title>Document</title>
+  <title>CSS Animations</title>
   <link href="style.css" rel="stylesheet" type="text/css"/>
 </head>
 <body>
   <div class="wrapper">
     <img src="mario-examples/img/cloud.png"/>
+  </div>
+  <div>
+    <a href="https://www.w3schools.com/css/css3_2dtransforms.asp" target="_blank">Click here to learn more</a>
   </div>
 </body>
 </html>
